deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dble-vert-sldr-deployment
spec:
  replicas: 6  # Number of desired replicas
  selector:
    matchLabels:
      app: dble-vert-sldr
  template:
    metadata:
      labels:
        app: dble-vert-sldr
    spec:
      containers:
      - name: dble-vert-sldr
        image: yash5090/dble-vert-sldr:latest
        ports:
        - containerPort: 5000
